# viko

./: .gitignore  CMakeLists.txt  README.md
AntrasSav/: salyga_2.cpp  salyga_3.cpp  salyga_5.cpp
Bash/sav1/: fifth.sh  first.sh  fourth.sh  second.sh  third.sh
Bash/sav1/testdata/: first
Bash/sav2/: fifth.sh  first.sh  fourth.sh  second.sh  seventh.sh  sixth.sh  third.sh
Bash/sav3/: first.sh  second.sh  third.sh
Klases/: antra_uzd.cpp  trecia_uzd.cpp
ModularProgramming/: CMakeLists.txt  test.cpp
ModularProgramming/AntrasSav/: salyga_1.cpp  salyga_3.cpp  salyga_4.cpp
ModularProgramming/Klases/: ketv.cpp  main.cpp
ModularProgramming/PirmasSav/: salyga_1.cpp  salyga_2.cpp
ModularProgramming/TrecSav/: antra_uzd.cpp  ketv_uzd.cpp  pirma_uzd.cpp  trec_uzd.cpp
PirmasSav/: salyga_3.cpp  salyga_4.cpp  salyga_5.cpp
