cmake_minimum_required(VERSION 3.12)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled ModularProgramming/Klases/main.cpp)
add_executable(asd ModularProgramming/Klases/antra_uzd.cpp)
add_executable(trec ModularProgramming/Klases/trecia_uzd.cpp)
add_executable(ketv ModularProgramming/Klases/ketv.cpp)
add_executable(salyga_1 ModularProgramming/PirmasSav/salyga_1.cpp)

add_executable(PirmasSav_salyga_2.cpp ModularProgramming/PirmasSav/salyga_2.cpp)
add_executable(PirmasSav_salyga_3.cpp ModularProgramming/PirmasSav/salyga_3.cpp)
add_executable(PirmasSav_salyga_4.cpp ModularProgramming/PirmasSav/salyga_4.cpp)
add_executable(PirmasSav_salyga_5.cpp ModularProgramming/PirmasSav/salyga_5.cpp)

add_executable(AntrasSav_salyga_1.cpp ModularProgramming/AntrasSav/salyga_1.cpp)
add_executable(AntrasSav_salyga_2.cpp ModularProgramming/AntrasSav/salyga_2.cpp)
add_executable(AntrasSav_salyga_3.cpp ModularProgramming/AntrasSav/salyga_3.cpp)
add_executable(AntrasSav_salyga_4.cpp ModularProgramming/AntrasSav/salyga_4.cpp)
add_executable(AntrasSav_salyga_5.cpp ModularProgramming/AntrasSav/salyga_5.cpp)