cmake_minimum_required(VERSION 3.12)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled Klases/main.cpp)
add_executable(asd Klases/antra_uzd.cpp)
add_executable(trec Klases/trecia_uzd.cpp)
add_executable(ketv Klases/ketv.cpp)
add_executable(salyga_1 PirmasSav/salyga_1.cpp)

add_executable(PirmasSav_salyga_2.cpp PirmasSav/salyga_2.cpp)
add_executable(PirmasSav_salyga_3.cpp PirmasSav/salyga_3.cpp)
add_executable(PirmasSav_salyga_4.cpp PirmasSav/salyga_4.cpp)
add_executable(PirmasSav_salyga_5.cpp PirmasSav/salyga_5.cpp)

add_executable(AntrasSav_salyga_1.cpp AntrasSav/salyga_1.cpp)
add_executable(AntrasSav_salyga_2.cpp AntrasSav/salyga_2.cpp)
add_executable(AntrasSav_salyga_3.cpp AntrasSav/salyga_3.cpp)
add_executable(AntrasSav_salyga_4.cpp AntrasSav/salyga_4.cpp)
add_executable(AntrasSav_salyga_5.cpp AntrasSav/salyga_5.cpp)